Bug 419582: Unblocklisted plugin should be set to enable on startup. r+sr=jst