modules/plugin/base/src/nsPluginHostImpl.h
@@ -117,24 +117,31 @@ public:
   void SetHost(nsPluginHostImpl * aHost);
   void TryUnloadPlugin(PRBool aForceShutdown = PR_FALSE);
   void Mark(PRUint32 mask) {
+    PRBool wasEnabled = IsEnabled();
     mFlags |= mask;
-    // Add mime types to the category manager only if we were made
-    // 'active' by setting the host
-    if ((mask & NS_PLUGIN_FLAG_ENABLED) && mPluginHost) {
-      RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginRegister);
+    // Update entries in the category manager if necessary.
+    if (mPluginHost && wasEnabled != IsEnabled()) {
+      if (wasEnabled)
+        RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginUnregister);
+      else
+        RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginRegister);
     }
   }
   void UnMark(PRUint32 mask) {
+    PRBool wasEnabled = IsEnabled();
     mFlags &= ~mask;
-    // Remove mime types added to the category manager only if we were
-    // made 'active' by setting the host
-    if ((mask & NS_PLUGIN_FLAG_ENABLED) && mPluginHost) {
-      RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginUnregister);
+    // Update entries in the category manager if necessary.
+    if (mPluginHost && wasEnabled != IsEnabled()) {
+      if (wasEnabled)
+        RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginUnregister);
+      else
+        RegisterWithCategoryManager(PR_FALSE, nsPluginTag::ePluginRegister);
     }
   }
   PRBool HasFlag(PRUint32 flag) { return (mFlags & flag) != 0; }
   PRUint32 Flags() { return mFlags; }
   PRBool Equals(nsPluginTag* aPluginTag);
+  PRBool IsEnabled() { return HasFlag(NS_PLUGIN_FLAG_ENABLED) && !HasFlag(NS_PLUGIN_FLAG_BLOCKLISTED); }
 
   enum nsRegisterType {
     ePluginRegister,
